@@ -1,3 +1,11 @@
+2014-06-02  Raphael Moreira Zinsly  <rzinsly@linux.vnet.ibm.com>
+
+	* sysdeps/powerpc/dfpu/quantized32.c (__quantized32): Refactor and
+	add a check to see if the adjusted coefficient will fit in _Decimal32.
+	* sysdeps/powerpc/dfpu/quantized128.c (__quantized128): Refactor to
+	simplify the code.
+	* sysdeps/powerpc/dfpu/quantized64.c (__quantized64): Likewise.
+
 2014-05-29  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
 
 	* sysdeps/powerpc/dfpu/quantized32.c (quantized32): Add a todo comment
